replace hwi with lark